--- a/.editorconfig
+++ b/.editorconfig
@@ -8,3 +8,6 @@ dotnet_diagnostic.IDE0055.severity = none
 
 # CA1307: Specify StringComparison
 dotnet_diagnostic.CA1307.severity = none
+
+# CA1305: Specify IFormatProvider
+dotnet_diagnostic.CA1305.severity = none
