--- a/coil-levels-csharp.csproj
+++ b/coil-levels-csharp.csproj
@@ -12,5 +12,6 @@
     </PackageReference>
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0007" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta0007" />
+    <PackageReference Include="C5" Version="2.5.3 " />
   </ItemGroup>
 </Project>
